Fix styling issue on smaller devices

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -71,13 +71,13 @@ textarea {
   }
 }
 
-// Queue Table
+// Other
 // ------------------------
 
-div.queue-table {
+div.horizontal-scroll {
   overflow-y: scroll;
+}
 
-  > table {
-    min-width: 650px;
-  }
+table.queue-table {
+  min-width: 650px;
 }
